crates/shipper-core/src/ops/auth/snapshots/shipper_core__ops__auth__resolver__tests__edge_snapshots__snapshot_auth_info_with_env_registry.snap
---
source: crates/shipper-core/src/ops/auth/resolver.rs
expression: info
---
AuthInfo {
    token: Some(
        "tok-from-registry-env",
    ),
    source: EnvRegistry,
    detected: true,
}
