crates/shipper-core/src/ops/auth/snapshots/shipper_core__ops__auth__resolver__tests__edge_snapshots__snapshot_mask_token_long_value.snap
---
source: crates/shipper-core/src/ops/auth/resolver.rs
expression: "mask_token(\"abcdefghijklmnopqrstuvwxyz\")"
---
"abcd****wxyz"
