crates/shipper-core/src/ops/auth/snapshots/shipper_core__ops__auth__resolver__tests__edge_snapshots__snapshot_token_source_env_registry.snap
---
source: crates/shipper/src/ops/auth/resolver.rs
expression: "TokenSource::EnvRegistry"
---
EnvRegistry
